--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.primary-color {
+    color: #0fcda1;
+}
+
+.bg-primary-color {
+    background-color: #fff;
+}
+
+
+.secondary-color {
+    color: #000;
+}
+
+
+.supershop-container {
+    @apply max-w-[1280px] w-full mx-auto py-10 md:py-12 lg:py-20 px-3;
+}
