--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,22 @@
 .supershop-container {
     @apply max-w-[1280px] w-full mx-auto py-10 md:py-12 lg:py-20 px-3;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 0px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #0fcda1;
+    border-radius: 10px;
+  }
+
