--- a/src/shared/Navbar/Navbar.css
+++ b/src/shared/Navbar/Navbar.css
@@ -11,7 +11,7 @@
     position: absolute;
     height: .1rem;
     width: 0%;
-    background: #000;
+    background: #fff;
     bottom: -.1rem;
     transition: .4s linear;
   }
@@ -20,7 +20,7 @@
     position: absolute;
     height: .1rem;
     width: 100%;
-    background: #000;
+    background: #fff;
     bottom: -.1rem;
     transition: .4s linear;
     /* width: 100%; */
