--- a/src/index.css
+++ b/src/index.css
@@ -25,18 +25,19 @@
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 3px;
+    height: 3px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
+    box-shadow: inset 0 0 1px grey;
     border-radius: 0px;
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #0a1d56;
+    background: #3a2626;
     border-radius: 10px;
   }
 
